<resources>
    <string name="app_name">恋恋</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">登录</string>
    <string name="title_activity_add_info_activity1">完善注册信息(1/3)</string>
    <string name="title_activity_activity_list">ActivityList</string>
    <string name="title_activity_add_info_activity2">完善注册信息（2/3）</string>
    <string name="warn_1">（慎重选择， 它会出现在你的头像旁，以便练友更好的了解你）</string>
    <string name="my_image_label">我的形象标签</string>
    <string name="sure">确定</string>
    <string name="title_activity_add_info_activity3">完善注册信息（3/3）</string>
    <string name="next">下一步</string>
    <string name="my_work_circle">我的职场圈子</string>
    <string name="select_birthday">请填写生日</string>
    <string name="warn2">第三方无需注册，直接点击登录</string>
    <string name="login">登录</string>
    <string name="hint_phone">请输入手机号码</string>
    <string name="hint_psw">请输入密码</string>
    <string name="title_activity_register">注册</string>
    <string name="hint_code_sms">填写验证码</string>
    <string name="title_activity_protocol">用户协议</string>



<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_hot">HotActivity</string>
    <string name="title_activity_guide">GuideActivity</string>
    <string name="search">搜索</string>
    <string name="title_activity_face_rank">颜值榜</string>
    <string name="title_activity_hot_rank">人气榜</string>
    <string name="title_activity_pay_rank">打赏榜</string>
    <string name="title_activity_tuhao_rank">土豪</string>
    <string name="title_activity_send_msg">发消息</string>
    <string name="title_activity_invite_friends">邀请好友</string>
    <string name="title_activity_send_lian_lian">发恋恋</string>
    <string name="title_activity_meet">去遇见</string>

    <string name="recore_voice_pic">录制有声图片（10s）</string>
    <string name="recore_dsc">&#160;&#160;&#160;&#160;(成为 “颜色值”、“人气榜”、“收入榜”及“土豪榜”的任一榜单TOP50、录音市场即可升级为30s)</string>
    <string name="title_activity_record">RecordActivity</string>
    <string name="title_activity_chumo_detail">ChumoDetailActivity</string>

</resources>
