<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.lianlian.ui.login.AddInfoActivity2">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#13161b"
        android:paddingBottom="@dimen/dimen_5"
        android:paddingTop="@dimen/dimen_5"
        android:text="@string/warn_1"
        android:textColor="#919294"
        android:textSize="@dimen/text_13"/>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/windowTitleBackground"
        android:orientation="vertical"
        android:padding="@dimen/dimen_8"
        app:divider="@drawable/divider"
        app:showDividers="middle">

        <TextView
            android:id="@+id/labelName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_work_circle"
            android:textColor="#fff"
            android:textSize="@dimen/text_13"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/gridLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8"/>
    </android.support.v7.widget.LinearLayoutCompat>

    <Button
        android:layout_marginTop="@dimen/dimen_20"
        android:id="@+id/btn_sure"
        android:layout_marginBottom="@dimen/dimen_35"
        style="@style/redButton.mid"
        android:text="@string/next"/>
</LinearLayout>
