<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:scaleType="centerCrop"
        android:src="@drawable/register_bg"/>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dimen_35"
        android:paddingRight="@dimen/dimen_35"
        tools:context="com.lianlian.ui.login.LoginActivity">

        <ImageView
            android:layout_width="@dimen/dimen_100"
            android:layout_height="@dimen/dimen_100"
            android:layout_marginBottom="@dimen/dimen_20"
            android:layout_marginTop="@dimen/dimen_35"
            android:src="@drawable/logo_register"
            android:text="@string/hello_world"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/warn2"
            android:textColor="#fff"
            android:textSize="@dimen/text_13"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_weixin"
                style="@style/api_login"
                android:src="@drawable/login_wx"/>

            <ImageView
                android:id="@+id/iv_qq"
                style="@style/api_login"
                android:layout_marginLeft="@dimen/dimen_14"
                android:layout_marginRight="@dimen/dimen_14"
                android:src="@drawable/login_qq"/>

            <ImageView
                android:id="@+id/iv_weibo"
                style="@style/api_login"
                android:src="@drawable/login_wb"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="1px"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="#fff"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_14"
                android:layout_marginRight="@dimen/dimen_14"
                android:text="其他登录"
                android:textColor="#fff"
                android:textSize="@dimen/text_13"/>

            <View
                android:layout_width="0dp"
                android:layout_height="1px"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="#fff"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_5"
            android:background="@drawable/white_rect"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@drawable/ic_user"
                    style="@style/login_ic_style"/>

                <EditText
                    android:id="@+id/edit_phone"
                    style="@style/register_edit_style1"
                    android:hint="@string/hint_phone"/>
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_gravity="center_vertical"
                android:background="#fff"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@drawable/ic_password"
                    style="@style/login_ic_style"/>

                <EditText
                    android:id="@+id/edit_psw"
                    android:inputType="textPassword"
                    style="@style/register_edit_style1"
                    android:hint="@string/hint_psw"/>
            </LinearLayout>


        </LinearLayout>

        <Button
            android:id="@+id/login"
            style="@style/redButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_15"
            android:text="@string/login"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10">

            <TextView
                android:id="@+id/forgetPsw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="忘记密码>>"
                android:textColor="#fff"
                android:textSize="@dimen/text_13"/>

            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="注册>>"
                android:textColor="#fff"
                android:textSize="@dimen/text_13"/>
        </RelativeLayout>
    </LinearLayout>
</FrameLayout>

